--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
      
   </div>
-  <script src="script.js"></script>
+  <script src="scriptnw.js"></script>
  
 <div id="converter-group" class="converter-block">
   <h2>Conversor de link</h2>
